--- a/index.html
+++ b/index.html
@@ -214,8 +214,12 @@ canvas{display:block}
   .menuBtn{padding:10px 28px;font-size:11px}
   #menu h1{font-size:40px;letter-spacing:6px}
   #classGrid{flex-wrap:wrap;justify-content:center}
-  .classCard{width:130px}
+  .classCard{width:120px;padding:12px 10px}
+  .classCard .cstat{display:none}
   #upgradePanel{min-width:min(560px,92vw);bottom:210px}
+  #classScreen{overflow-y:auto;justify-content:flex-start;padding:20px 0 40px}
+  #classScreen h2{font-size:20px;letter-spacing:4px;margin-top:10px}
+  #classScreen .sub{margin-bottom:14px}
 }
 .godBadge{display:inline-block;background:rgba(255,215,0,0.1);border:1px solid rgba(255,215,0,0.4);color:#ffd700;font-size:8px;letter-spacing:3px;padding:2px 8px;margin-left:8px;vertical-align:middle;text-shadow:0 0 8px #ffd700}
 .upgradeChip{display:inline-flex;align-items:center;background:rgba(57,255,20,0.08);border:1px solid rgba(57,255,20,0.25);padding:3px 8px;margin:2px;font-size:9px;letter-spacing:1px;gap:4px;cursor:default}
